RESOLVED FIXED93284
GraphicsLayerAnimation shouldn't use HashMap<String>
https://bugs.webkit.org/show_bug.cgi?id=93284
Summary GraphicsLayerAnimation shouldn't use HashMap<String>
Noam Rosenthal
Reported 2012-08-06 11:08:57 PDT
GraphicsLayerAnimation shouldn't use HashMap<String>
Attachments
Patch (10.63 KB, patch)
2012-08-06 11:13 PDT, Noam Rosenthal
no flags
Patch for landing (10.57 KB, patch)
2012-08-07 07:19 PDT, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2012-08-06 11:13:22 PDT
Kenneth Rohde Christiansen
Comment 2 2012-08-06 12:26:56 PDT
Comment on attachment 156729 [details] Patch It also simplifies the code :-)
WebKit Review Bot
Comment 3 2012-08-06 16:44:03 PDT
Comment on attachment 156729 [details] Patch Clearing flags on attachment: 156729 Committed r124816: <http://trac.webkit.org/changeset/124816>
WebKit Review Bot
Comment 4 2012-08-06 16:44:07 PDT
All reviewed patches have been landed. Closing bug.
Noam Rosenthal
Comment 5 2012-08-06 17:30:16 PDT
Caused some test crashes, investigating. Will roll out if can't find the cause quickly.
Noam Rosenthal
Comment 6 2012-08-07 07:19:09 PDT
Created attachment 156936 [details] Patch for landing
WebKit Review Bot
Comment 7 2012-08-07 12:49:27 PDT
Comment on attachment 156936 [details] Patch for landing Clearing flags on attachment: 156936 Committed r124908: <http://trac.webkit.org/changeset/124908>
WebKit Review Bot
Comment 8 2012-08-07 12:49:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.